Kubernetes/headlamp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: headlamp
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4466
  selector:
    k8s-app: headlamp
